Sync homepage products with actual menu data

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
             <div
                 class="bg-white rounded-[2rem] overflow-hidden shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all group cursor-pointer signature-dish opacity-0 translate-y-10">
                 <div class="relative overflow-hidden h-[280px]">
-                    <img src="images/menu/All Day Platter $30.jpeg" alt="Carnivore Platter"
+                    <img src="images/menu/Platter for 2 $25.jpeg" alt="Platter for 2"
                         class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500">
                     <div
                         class="absolute top-4 right-4 bg-primary-yellow text-white px-4 py-2 rounded-full font-bold text-sm">
@@ -584,9 +584,9 @@
                     </div>
                 </div>
                 <div class="p-8 text-center">
-                    <h3 class="text-2xl font-bold text-text-dark mb-3">Carnivore Platter</h3>
+                    <h3 class="text-2xl font-bold text-text-dark mb-3">Platter for 2</h3>
                     <p class="text-text-gray text-sm mb-6 leading-relaxed">
-                        Boerewors, brisket, 1/4 chicken, and 2 pork chops. The ultimate feast for meat lovers.
+                        Wings/drums, pork chop, sausage, rump steak, chips. The perfect shared dining experience.
                     </p>
                     <div class="flex flex-col items-center gap-4">
                         <span class="text-3xl font-bold text-text-dark">$25.00</span>
@@ -1041,29 +1041,29 @@
         // Menu Data
         const menuData = {
             breakfast: [
-                { name: "Hungry Man Breakfast", price: "$12.00", img: "images/menu/Hungry Man's Breakfast $12.jpeg", rating: "5.0" },
+                { name: "Hungry Man’s Breakfast", price: "$12.00", img: "images/menu/Hungry Man's Breakfast $12.jpeg", rating: "5.0" },
                 { name: "Breakfast Quesadillas", price: "$7.00", img: "images/menu/Fairy Breakfast $5 (1 egg, 2 rations of bacon, tomato slice, 12 a sausage & chips).jpeg", rating: "4.8" },
-                { name: "Vegetarian Bowl", price: "$8.00", img: "images/menu/Muesli $6.jpeg", rating: "4.7" }
+                { name: "Fairy Breakfast", price: "$5.00", img: "images/menu/Fairy Breakfast $5 (1 egg, 2 rations of bacon, tomato slice, 12 a sausage & chips).jpeg", rating: "4.9" }
             ],
             burgers: [
                 { name: "Big Fairy Burger", price: "$12.00", img: "images/menu/Big Fairy Burger $12 (2 beef patties, 2 cheese slices, 4 rashers of bacon, avocado, tomato and lettuce, burger roll with chips and salad).jpeg", rating: "5.0" },
-                { name: "Supreme Cheese", price: "$10.00", img: "images/menu/Supreme Burger $9.jpeg", rating: "4.8" },
-                { name: "Classic Burger", price: "$8.00", img: "images/menu/14 Chicken and chips $7.jpeg", rating: "4.9" }
+                { name: "Supreme Cheese Burger", price: "$10.00", img: "images/menu/Supreme Burger $9.jpeg", rating: "4.8" },
+                { name: "Chicken Crunchy", price: "$7.00", img: "images/menu/14 Chicken and chips $7.jpeg", rating: "4.9" }
             ],
             pastas: [
-                { name: "Shrimp & Salmon", price: "$15.00", img: "images/menu/Pasta_Platter.jpeg", rating: "5.0" },
-                { name: "Chicken Alfredo", price: "$12.00", img: "images/menu/Chicken Schnitzel $12.jpeg", rating: "4.7" },
-                { name: "Bolognaise", price: "$9.00", img: "images/menu/Garlic Beef Chicken Pork Rice $5.jpeg", rating: "4.9" }
+                { name: "Shrimp & Salmon Fettuccine", price: "$15.00", img: "images/menu/Pasta_Platter.jpeg", rating: "5.0" },
+                { name: "Chicken Alfredo", price: "$12.00", img: "images/menu/Chicken Schnitzel $12.jpeg", rating: "4.9" },
+                { name: "Beef Napolitana", price: "$8.00", img: "images/menu/Garlic Beef Chicken Pork Rice $5.jpeg", rating: "4.8" }
             ],
             pizzas: [
                 { name: "Three Cheeses", price: "$10.00", img: "images/menu/3 Cheeses Pizza $10.jpeg", rating: "5.0" },
                 { name: "The Fairy Pizza", price: "$14.00", img: "images/menu/Regina Pizza $9.jpeg", rating: "4.8" },
-                { name: "Family Pizza", price: "$12.00", img: "images/menu/All Day Platter $30.jpeg", rating: "4.9" }
+                { name: "Regina", price: "$9.00", img: "images/menu/Regina Pizza $9.jpeg", rating: "4.9" }
             ],
             sushi: [
-                { name: "Tiger Roll", price: "$10.00", img: "images/menu/Rainbow Reloaded $12.jpeg", rating: "5.0" },
-                { name: "Salmon Sashimi", price: "$6.00", img: "images/menu/Fairy Sushi Platter $30.jpeg", rating: "4.8" },
-                { name: "California Roll", price: "$8.00", img: "images/menu/Smoked Salmon Creamy cheese California 8 pieces. $10 (Sumptuous fusion of bold flavors).jpeg", rating: "4.7" }
+                { name: "Smoked Salmon Creamy Cheese Calc", price: "$10.00", img: "images/menu/Smoked Salmon Creamy cheese California 8 pieces. $10 (Sumptuous fusion of bold flavors).jpeg", rating: "5.0" },
+                { name: "Fairy Sushi Platter", price: "$30.00", img: "images/menu/Fairy Sushi Platter $30.jpeg", rating: "4.9" },
+                { name: "Rainbow Reloaded", price: "$12.00", img: "images/menu/Rainbow Reloaded $12.jpeg", rating: "4.8" }
             ]
         };
 
